[package]
name = "temps-embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }

# Tokenization libraries (optional features)
tokenizers = { version = "0.15", optional = true }
tiktoken-rs = { version = "0.5", optional = true }

[features]
default = []
# Enable Hugging Face tokenizers support
huggingface = ["tokenizers"]
# Enable OpenAI tiktoken support
openai = ["tiktoken-rs"]
# Enable all tokenization backends
all = ["huggingface", "openai"]

[dev-dependencies]
tokio = { workspace = true }
