[package]
name = "temps-entities"
version = "0.1.0"
edition = "2021"

[dependencies]
temps-core = { path = "../temps-core" }
sea-orm = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
