[package]
name = "temps-geo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1.0"
axum = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
maxminddb = "0.27.0"
rand = { workspace = true }
sea-orm = { version = "1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { workspace = true }
temps-core = { path = "../temps-core" }
temps-database = { path = "../temps-database" }
temps-entities = { path = "../temps-entities" }
utoipa = "5.1"
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
