[package]
name = "temps-import-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Async
async-trait = "0.1"

# Database
sea-orm = { workspace = true }

# OpenAPI
utoipa = { version = "5.4", features = ["chrono"] }

# Optional for validation
validator = { version = "0.18", optional = true, features = ["derive"] }

[features]
default = []
validation = ["validator"]
